# ShellForge-

./: LICENSE  README.md  _write_ps.py  interactive.py  pyproject.toml  requirements.txt  shellforge.py
encoders/: __init__.py  encode.py
examples/: usage_examples.md
generators/: __init__.py  awk.py  base.py  bash_sh.py  c_lang.py  csharp.py  golang.py  java_lang.py  lua.py  netcat.py  perl_lang.py  php_lang.py  powershell.py  python_lang.py  ruby_lang.py  socat.py  webshell.py
listeners/: __init__.py  listener_helper.py
tests/: __init__.py  test_generators.py
